--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,23 @@
  *= require_tree .
  *= require_self
  */
+h1 {
+  padding-top: 24px;
+  padding-left: 24px;
+  font-size: 48px;
+  color: black;
+}
+
+h2 {
+  padding-top: 32px;
+  padding-left: 40px;
+  font-size: 18px;
+  color: black;
+}
+h3 {
+  padding-top: 0px;
+  padding-left: 40px;
+  font-size: 18px;
+  color: black;
+  font-style: italic;
+}
